devops/kubernetes/exemple/rentahouse/wslocation/baremetal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wslocation-deployment
  namespace: rentahouse
  labels:
    app.kubernetes.io/component: web-service
    app.kubernetes.io/part-of: rentahouse
spec:
  selector:
    matchLabels:
      app: wslocation
  replicas: 2
  template:
    metadata:
      labels:
        app: wslocation
    spec:
      volumes:
      - name: host-mapped-nfs
        hostPath:
          path: "/share/nfs/rentahouse/wslocation/logs"
        #persistentVolumeClaim:
        #  claimName: nfs-rentahouse-pvc
      containers:
      - name: wslocation
        image: registry.gitlab.com/rentahouse1/wslocation/main
        ports:
        - containerPort: 80
        volumeMounts:
            # name must match the volume name below
            - name: host-mapped-nfs
              mountPath: "/app/logs"
        livenessProbe:
          httpGet:
            path: /healthz/liveness
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 120
        readinessProbe:
          httpGet:
            path: /healthz/readiness
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 120
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "300m"
            memory: "200Mi"
