devops/kubernetes/exemple/rentahouse/wslocation/baremetal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wslocation-service
  namespace: rentahouse
  labels:
    app: wslocation-service
spec:
  selector: 
    app: wslocation
  type: NodePort  
  ports:
    - name: "wslocation-metrics"
      port: 80
      targetPort: 80
      nodePort: 31012
