devops/kubernetes/exemple/rentahouse/wslocation/baremetal/wslocation-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wslocation-route
  namespace: rentahouse
spec:
  parentRefs:
  - name: rentahouse-gateway
#    sectionName: http
  hostnames:
  - "wslocation.rah.kube.kilroy.devops.lan"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: wslocation-service
      port: 80
